OpenLDAP 2.2 Change Log

OpenLDAP 2.2.15 Release
	Fixed back-bdb DB_DEADLOCK memory leak bug (ITS#3213)
	Fixed back-bdb dbcache locking bug (ITS#3201)
	Fixed back-bdb ctxcsn locking bug
	Fixed back-bdb modify index corruption (ITS#3226)
	Fixed back-bdb leaking locks in tools (ITS#3245)
	Fixed back-bdb leaking locks in overlays (ITS#3255)
	Fixed back-hdb dn2id bug with unsigned chars
	Fixed back-ldap shared connections failover (ITS#3217)
	Fixed back-ldap validate/pretty values (ITS#3218)
	Fixed back-monitor/backglue clash in tool mode (ITS#3254)
	Fixed slapi slapi_int_compute_output_ber attrs bug
	Fixed slapd uniqueMember/nameUID bugs (ITS#3210)
	Fixed slapd uniqueMemberMatch empty DN portion bug (ITS#3247)
	Fixed slapd oidValidate 0 bug (ITS#3211)
	Fixed slapd operational attribute log message bug (ITS#3205)
	Fixed slapd pagedResults invalid cookie bug (ITS#3089)
	Fixed slapd group ACL locking bug (ITS#3173)
	Fixed slapd ACI caching bug (caching disabled, ITS#3215)
	Fixed slapd abandon/cancel pending bug
	Fixed slapd attribute description syntax bug
	Fixed slapadd dryrun mode (ITS#3244)
	Fixed libldap SASL re-encode bug
	Fixed libldap sasl_encode 64-bit bug (ITS#3054,3212)
	Fixed libldap matchedValues parsing bug (ITS#3208,3216)
	Fixed libldap DN '=' handling
	Fixed libldap_r runqueue bug
	Fixed librewrite empty rewriteContext leak (ITS#3256)
	Fixed ldapmodify controls input bug (ITS#3257)
	Updated libldap_r read/writer locks
	Build environments
		Added additional res_query detection for MacOS X
		Added default ldapi:// SSF build setting
		Fixed OPENLDAP_FD_SETSIZE macro handlling
		Fixed slapd linking on MS Windows
		Fixed backend module linking
	Documentation
		Misc. man page cleanup

OpenLDAP 2.2.14 Release
	Fixed back-bdb ignore deadlock bug (ITS#3188)
	Fixed back-bdb pagedResults no end cookie bug (ITS#3161)
	Fixed back-bdb pagedResults clear controls bug (ITS#3182)
	Fixed back-bdb pagedResults ignore control bug